refactor: code quality cleanup, security hardening and coach session API
Bug fixes:
- Fix @Transactional self-invocation in JournalService by extracting
  analyzeAsync to JournalEntryUpdater component bean
- Fix CoachService N+1: bulk deleteAllById instead of loop
- Fix duplicate DB call in CoachService: load user once and reuse
- Fix history ordering in CoachService

Security:
- CORS: allowCredentials(false), whitelist-only origins
- JWT: issuer/audience validation added
- Auth: prevent user enumeration on login with generic error messages
- Prompt injection guard: strip <SYSTEM> tags from coach messages

Config:
- Remove duplicate @EnableAsync from AsyncConfig
- StorageConfig: single RestTemplate, operation-specific timeouts
- CacheConfig: Caffeine properly configured with TTL

API additions:
- GET /api/coach/sessions?page=0&size=20 — paginated session list
- DELETE /api/coach/sessions/{sessionId}
- Coach session auto-title from first user message

Code quality:
- Convert all Turkish inline comments to English
- Remove dead/unused code across services and controllers
- Add @Size validations, fix pagination in JournalService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>